--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#4fc3f7</color>
     <color name="colorPrimaryDark">#0093c4</color>
     <color name="colorAccent">#ff1744</color>
+    <color name="gray">#aaaaaa</color>
 </resources>
